--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+    - name: 🔒 Report a Security Vulnerability
+      url: https://github.com/humanwhocodes/humanfs/security/advisories/new
+      about: Privately report a security vulnerability to the team
     - name: 🗣 Ask a Question, Discuss
       url: https://github.com/humanwhocodes/humanfs/discussions
       about: Get help using humanfs
